# ictbot3

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: README.md  pyproject.toml
backend/src/ict_backend/: __init__.py  app.py
backend/src/ict_backend/api/: __init__.py
backend/src/ict_backend/api/routes/: __init__.py  health.py
backend/src/ict_backend/core/: __init__.py  errors.py  logging.py  settings.py
backend/src/ict_backend/dependencies/: __init__.py  health.py
backend/src/ict_backend/repositories/: __init__.py  health.py
backend/src/ict_backend/schemas/: __init__.py  health.py
backend/src/ict_backend/services/: __init__.py  health.py
backend/tests/: test_health_endpoint.py
config/: README.md  secrets.baseline
docs/: README.md  architecture.md  environment.md
frontend/: README.md
infra/: README.md
