[tool.poetry]
name = "ict-backend"
version = "0.1.0"
description = "Backend service for the ICT BTC signal platform"
authors = ["ICT Engineering <engineering@example.com>"]
readme = "README.md"
packages = [{ include = "ict_backend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.6.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.5"
mypy = "^1.10.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
